--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="/img/pic.PNG">
+            <p>This is created by Nishan Jain, and it uses weatherstack API for forecasting !!!</p>
+            <img class="portrait" src="/img/pic.jpg">
         </div>
         
         {{>footer}}
